fix login button

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -67,7 +67,7 @@ img {
 
 p.login-logo {
 		color: white;
-		float: right
+		float: right;
 		margin-top: 10px;
 		margin-right: 14px;
 		font-weight: 900;
