--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -10,7 +10,8 @@ light blue: #1c5380
 
 body {
 	font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-	margin: 0;
+	margin-left: auto;
+	margin-right: auto;
 	width: 900px;
 	padding-top: 5%;
 	background: #fff url("../images/bgtile.png") repeat-x;
@@ -28,6 +29,7 @@ body {
 
 .main {
 		background: url("../images/frame.png") no-repeat;
+		background-size: contain;
 		padding: 40px;
 		width: 450px;
 }
